# house-scrapting

./: README.md  app.py  pyproject.toml  resources.md  schema.sql  sites.csv
data/postgresqlite/: postgresqlite.json
data/postgresqlite/pgdata/: postmaster.opts
data/postgresqlite/pgdata/base/13774/: 1247  1249  1249_fsm  1259  1259_fsm  1259_vm  16558  16564  16565  16567  16573  16574  16581  16587  2224  2579  2604  2606  2608  2609  2610  2615  2619  2619_fsm  2619_vm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  (+14 more)
data/postgresqlite/pgdata/global/: 1260  pg_control  pg_internal.init
data/postgresqlite/pgdata/pg_stat/: db_0.stat  db_13774.stat  global.stat
data/postgresqlite/pgdata/pg_xact/: 0000
